Fixed menu position management adding "middle" vertical alignment and "center" horizontal alignment

--- a/src/less/components/menu.less
+++ b/src/less/components/menu.less
@@ -1,10 +1,11 @@
 .mui-menu {
 
   &.top { bottom: 4px !important; }
-  &.center { top: 4px !important; }
+  &.middle { top: 4px !important; }
   &.bottom { top: 48px !important; }
 
   &.right { left: 24px !important; }
+  &.center { }
   &.left { right: 0px !important; }
 
   * { .ease-out; }
